# toi

./: .gitignore  pyproject.toml
lab1/: main.py  Едрышов_9.1_1b.docx
lab2/: main.py
lab3/: main.py  toi_laba_3.m
lab4/: lab4_example_3.m  lab4_example_g.m  lab4_example_ns.m  lab4_example_rnd.m  main.py
lab5/: main.py
lab6/: lab2part.py  main.py  toi_laba_6_example.m
lab7/: main.py
lab8/: main.py  pr35_1_lin_regr.m
lab9/: lab9_kmeans.m  main.py
